Opened 17 years ago
Closed 16 years ago
#1897 closed bug (fixed)
BSnow: "Click to remove" does not work
Reported by: | stippi | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
I don't know if this is a bug in our BShelf implementation or BSnow, but the second time you launch BSnow, I guess you are supposed to be able to remove it from the Desktop, but clicking the window has no effect, even though it says that would remove it.
Change History (8)
comment:1 by , 17 years ago
comment:2 by , 17 years ago
It might also be one of the specifiers that got renamed from the BeOS version... would need to check that.
comment:4 by , 16 years ago
I take it the "Click me to remove BSnow", means to click the Replicator handle and choosing "Delete", not just clicking into the window. In any case, removing still doesn't work with hrev27404 on vmware.
comment:5 by , 16 years ago
No, it does mean the "Click me to remove BSnow" in the window. Both should work.
comment:6 by , 16 years ago
No, it does mean the "Click me to remove BSnow" in the window. Both should work.
Ah, I see. Then both don't. :)
comment:7 by , 16 years ago
Owner: | changed from | to
---|---|
Status: | assigned → new |
It's definitely a bug in the BShelf code. ResolveSpecifier() needs a special case for B_DELETE_PROPERTY and B_COUNT_PROPERTIES, and MessageReceived() seems to discard it incorrectly due to the "popped" variable being true.
Looks like a scripting issue... probably in BShelf.