Fix various errors in handling specifiers and/or scripting messages. This makes the Get, Count and Delete Replicant scripting directives work correctly, and consequently fixes the Remove BSnow button (ticket #1897), as well as commands like: hey Tracker Get Replicant BSnow of Shelf of View PoseView of Window 1

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28361 a95241bf-73f2-0310-859d-f6bbb57e9c96